--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -97,7 +97,7 @@
           </div>
         </div>
       </main>
-      <footer class="footer py-3 bg-dark text-light">
+      <footer class="footer mt-5 py-3 bg-dark text-light">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
