--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -38,8 +38,8 @@
           </div>
       </nav>
       <main>
+        <h2 class="underline-pink">Finalizações</h2>
         <div class="container mt-5">
-          <h2 class="underline-pink">Sobre Nós</h2>
           <div class="row">
             <div class="col-4 mb-5">
               <div class="card" style="width: 18rem;">
