--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -38,7 +38,9 @@
           </div>
       </nav>
       <main>
-        <h1 class="titulo underline-pink mx-auto">Finalizações</h2>
+        <div class="mx-auto">
+          <h1 class="titulo">Finalizações</h2>
+        </div>
         <div class="container mt-5">
           <div class="row">
             <div class="col-4 mb-5">
