--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -38,7 +38,7 @@
           </div>
       </nav>
       <main>
-        <div class="mx-auto">
+        <div class="text-center">
           <h1 class="titulo">Finalizações</h2>
         </div>
         <div class="container mt-5">
