--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -41,9 +41,9 @@
         <div class="text-center">
           <h1 class="titulo">Finalizações</h2>
         </div>
-        <div class="container mt-4">
+        <div class="container mt-5">
           <div class="row">
-            <div class="col-4 mb-5">
+            <div class="col-4 d-flex justify-content-center mb-5">
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -52,7 +52,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4 mb-5">
+            <div class="col-4 d-flex justify-content-center mb-5">
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -61,7 +61,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4 mb-5">
+            <div class="col-4 d-flex justify-content-center mb-5">
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -70,7 +70,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 d-flex justify-content-center">
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-4.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -79,7 +79,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 d-flex justify-content-center">
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-5.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -88,7 +88,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-4">
+            <div class="col-4 d-flex justify-content-center">
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-6.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -98,7 +98,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div>        
       </main>
       <footer class="footer mt-5 py-3 bg-dark text-light">
         <div class="container">
