--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -23,10 +23,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link ms-2 active" aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link ms-2" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link ms-2" href="./finalizacoes.html">Finalizações</a>
+                <a class="nav-link ms-2 active" aria-current="page" href="./finalizacoes.html">Finalizações</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link ms-2" href="/sobre-nos.html">Sobre Nós</a>
