--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -23,16 +23,16 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                <a class="nav-link ms-2" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./finalizacoes.html">Finalizações</a>
+                <a class="nav-link ms-2" href="./finalizacoes.html">Finalizações</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/sobre-nos.html">Sobre Nós</a>
+                <a class="nav-link ms-2 active" aria-current="page" href="/sobre-nos.html">Sobre Nós</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/cadastro.html">Cadastre-se</a>
+                <a class="nav-link ms-2" href="/cadastro.html">Cadastre-se</a>
               </li>
             </ul>
           </div>
