--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -43,7 +43,7 @@
         </div>
         <div class="container mt-5">
           <div class="row">
-            <div class="col-6 col-md-4 d-flex justify-content-center mb-5">
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4"> <!-- Ajuste aqui -->
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -52,7 +52,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 col-md-4 d-flex justify-content-center mb-5">
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4"> <!-- Ajuste aqui -->
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-2.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -61,7 +61,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 col-md-4 d-flex justify-content-center mb-5">
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4"> <!-- Ajuste aqui -->
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-3.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -70,7 +70,16 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 col-md-4 d-flex justify-content-center">
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4"> <!-- Ajuste aqui -->
+              <div class="card" style="width: 18rem;">
+                <img src="./img/cabelos/cabelo-4.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Dedoliss</h5>
+                  <a href="#" class="btn btn-pink">Quero Esse!</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4"> <!-- Ajuste aqui -->
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-5.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -79,16 +88,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 col-md-4 d-flex justify-content-center">
-              <div class="card" style="width: 18rem;">
-                <img src="./img/cabelos/cabelo-5.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Fitagem</h5>
-                  <a href="#" class="btn btn-pink">Quero Esse!</a>
-                </div>
-              </div>
-            </div>
-            <div class="col-6 col-md-4 d-flex justify-content-center">
+            <div class="col-6 col-md-4 d-flex justify-content-center mb-4"> <!-- Ajuste aqui -->
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-6.png" class="card-img-top" alt="...">
                 <div class="card-body">
@@ -99,7 +99,8 @@
             </div>
           </div>
         </div>        
-      </main>      
+      </main>
+           
       <footer class="footer mt-5 py-3 bg-dark text-light">
         <div class="container">
             <div class="row">
