--- a/index.html
+++ b/index.html
@@ -9,46 +9,51 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">
-                <img src="./img/hairbot.png" alt="Logo" width="225" height="85" class="d-inline-block align-text-top">
-              </a>
-            </div>
-          </nav>
-          <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link ms-2 active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-2" href="./finalizacoes.html">Finalizações</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-2" href="/sobre-nos.html">Sobre Nós</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link ms-2" href="/cadastro.html">Cadastre-se</a>
-              </li>
-            </ul>
-          </div>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="./img/hairbot.png" alt="Logo" width="225" height="85" class="d-inline-block align-text-top">
+          </a>
+        </div>
       </nav>
-      <main>
-          <!-- Conteúdo principal da página -->
-      </main>
-      <footer class="footer mt-5 py-3 bg-dark text-light">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 text-center">
-                    <p class="m-0">HairBot © 2024. Todos os direitos reservados.</p>
-                </div>
+      <button class="navbar-toggler me-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link ms-2 active" aria-current="page" href="./index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link ms-2" href="./finalizacoes.html">Finalizações</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link ms-2" href="/sobre-nos.html">Sobre Nós</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link ms-2" href="/cadastro.html">
+              <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                Cadastre-se
+              </button>
+            </a>
+          </li>
+        </ul>
+      </div>
+  </nav>
+  <main>
+      <!-- Conteúdo principal da página -->
+  </main>
+  <footer class="footer mt-5 py-3 bg-dark text-light">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12 text-center">
+                <p class="m-0">HairBot © 2024. Todos os direitos reservados.</p>
             </div>
         </div>
-    </footer>
+    </div>
+  </footer>
+  <div id="modal-container"></div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
