--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         </div>
     </div>
   </footer>
-  <div id="modal-container"></div>
+  <div id="cadastro-container"></div>
 </body>
 <script>
-  fetch('modal.html')
+  fetch('_cadastro.html')
     .then(response => response.text())
     .then(data => {
-        document.getElementById('modal-container').innerHTML = data;
+        document.getElementById('cadastro-container').innerHTML = data;
     });
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
