--- a/_cadastro.html
+++ b/_cadastro.html
@@ -1,28 +1,28 @@
-<!-- modal.html -->
+<!-- _cadastro.html -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastro</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Aqui está o conteúdo do formulário.
+        Aqui está o conteúdo do formulário de cadastro.
         <form>
           <div class="mb-3">
-            <label for="campo1" class="form-label">Campo 1</label>
-            <input type="text" class="form-control" id="campo1">
+            <label for="nome" class="form-label">Nome</label>
+            <input type="text" class="form-control" id="nome">
           </div>
           <div class="mb-3">
-            <label for="campo2" class="form-label">Campo 2</label>
-            <input type="text" class="form-control" id="campo2">
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email">
           </div>
           <!-- Adicione mais campos conforme necessário -->
         </form>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
-        <button type="button" class="btn btn-primary">Salvar alterações</button>
+        <button type="button" class="btn btn-primary">Salvar</button>
       </div>
     </div>
   </div>
