--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a class="nav-link ms-2" href="/sobre-nos.html">Sobre Nós</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link ms-2" href="/cadastro.html">
+            <a class="nav-link ms-2" href="#">
               <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
                 Cadastre-se
               </button>
