--- a/_cadastro.html
+++ b/_cadastro.html
@@ -17,6 +17,10 @@
             <label for="email" class="form-label">Email</label>
             <input type="email" class="form-control" id="email">
           </div>
+          <div class="mb-3">
+            <label for="password" class="form-label">Senha</label>
+            <input type="password" class="form-control" id="password">
+          </div>
           <!-- Adicione mais campos conforme necessário -->
         </form>
       </div>
