--- a/index.html
+++ b/index.html
@@ -42,9 +42,25 @@
       </div>
   </nav>
   <main>
-    <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-      Cadastre-se
-    </button>
+    <div class="container"> 
+      <div class="row">
+        <div class="col-6">
+          <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+            Cadastre-se
+          </button>
+        </div>
+        <div class="col-6">
+          <div class="card border-solid border-rounded m-auto">
+            <p class="p-2 m-2">
+              Em um mundo em constante transformação, e nossa missão é estar à frente dessas mudanças, oferecendo soluções que simplificam tarefas diárias e elevam a experiência de vida.
+              Com o nosso robô finalizador de cabelo, não apenas otimizará o tempo, mas também garantirá resultados de qualidade profissional, sem a necessidade de visitas frequentes ao salão.
+              <br>Estamos comprometidos em desenvolver produtos que integram design inteligente e usabilidade, sempre com o foco em atender às necessidades dos nossos clientes.
+              Acreditamos que, ao permitir que as máquinas realizem funções que antes exigiam tempo e esforço, estamos liberando as pessoas para se concentrarem no que realmente importa — seu bem-estar, criatividade e estilo de vida.
+            </p>
+        </div>  
+        </div>
+      </div>
+    </div>
   </main>
   <footer class="footer mt-5 py-3 bg-dark text-light">
     <div class="container">
