--- a/index.html
+++ b/index.html
@@ -45,17 +45,19 @@
     <div class="container"> 
       <div class="row">
         <div class="col-4">
-          <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal2">
-            Cadastre-se
-          </button>
+          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid">
+          <div class="text-center">
+            <button type="button" class="btn btn-pink" data-bs-toggle="modal" data-bs-target="#exampleModal2">
+              Cadastre-se
+            </button>
+          </div>
         </div>
         <div class="col-8">
           <div class="card border-solid border-rounded m-auto">
             <p class="p-2 m-2">
               HairBot é um robô multifuncional que revoluciona sua rotina de cuidados com os cabelos, oferecendo diversas finalizações como ondas, cachos, lisos ou coques. Seu design compacto facilita o armazenamento e o transporte, tornando-o perfeito para viagens. Com uma interface intuitiva, é acessível a todos, independentemente da experiência. Transforme sua rotina de beleza e tenha um cabelo deslumbrante todos os dias com o HairBot, onde praticida
             </p>
-            <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid">
-        </div>  
+          </div>  
         </div>
       </div>
     </div>
