--- a/index.html
+++ b/index.html
@@ -44,18 +44,18 @@
   <main>
     <div class="container"> 
       <div class="row">
-        <div class="col-4">
-          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid">
+        <div class="col-4 text-center"> 
+          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
           <div class="text-center">
             <button type="button" class="btn btn-pink" data-bs-toggle="modal" data-bs-target="#exampleModal2">
               Cadastre-se
             </button>
           </div>
         </div>
-        <div class="col-8">
+        <div class="col-8  d-flex">
           <div class="card border-solid border-rounded m-auto">
             <p class="p-2 m-2">
-              HairBot é um robô multifuncional que revoluciona sua rotina de cuidados com os cabelos, oferecendo diversas finalizações como ondas, cachos, lisos ou coques. Seu design compacto facilita o armazenamento e o transporte, tornando-o perfeito para viagens. Com uma interface intuitiva, é acessível a todos, independentemente da experiência. Transforme sua rotina de beleza e tenha um cabelo deslumbrante todos os dias com o HairBot, onde praticida
+              HairBot é um robô multifuncional que revoluciona sua rotina de cuidados com os cabelos, oferecendo diversas finalizações como ondas, cachos, lisos ou coques. Seu design compacto facilita o armazenamento e o transporte, tornando-o perfeito para viagens. Com uma interface intuitiva, é acessível a todos, independentemente da experiência. Transforme sua rotina de beleza e tenha um cabelo deslumbrante todos os dias com o HairBot.
             </p>
           </div>  
         </div>
