--- a/index.html
+++ b/index.html
@@ -32,11 +32,7 @@
             <a class="nav-link ms-2" href="/sobre-nos.html">Sobre Nós</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link ms-2" href="#">
-              <button type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                Cadastre-se
-              </button>
-            </a>
+            <a class="nav-link ms-2" onclick="loadModal()" href="#">Cadastre-se</a>
           </li>
         </ul>
       </div>
@@ -76,11 +72,11 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="exampleModalLabel">Cadastre-se</h1>
+          <h1 class="modal-title fs-5" id="exampleModalLabel">Adquira o seu HairBot</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          aaaaaa
+          <p>Envie um email e garanta o seu</p>
           <form action="https://formspree.io/f/xdkokdzg" method="POST">
             <div class="mb-3">
               <label for="nome" class="form-label">Nome</label>
@@ -89,10 +85,6 @@
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
               <input type="email" class="form-control" id="email" name="email">
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-label">Senha</label>
-              <input type="password" class="form-control" id="password" name="password">
             </div>
             <!-- Adicione mais campos conforme necessário -->
             <div class="modal-footer">
@@ -106,11 +98,15 @@
   </div>  
 </body>
 <script>
-  fetch('_cadastro.html')
-      .then(response => response.text())
-      .then(data => {
-          document.getElementById('modal-container').innerHTML = data;
-      });
+  function loadModal() {
+      fetch('_cadastro.html')
+          .then(response => response.text())
+          .then(data => {
+              document.getElementById('modal-container').innerHTML = data;
+              const modal = new bootstrap.Modal(document.getElementById('exampleModal'));
+              modal.show();
+          });
+  }
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
