--- a/index.html
+++ b/index.html
@@ -48,12 +48,23 @@
             </button>
           </div>
         </div>
-        <div class="col-8  d-flex">
+        <div class="col-8 d-flex">
           <div class="card border-solid border-rounded m-auto">
             <p class="p-2 m-2">
               HairBot é um robô multifuncional que revoluciona sua rotina de cuidados com os cabelos, oferecendo diversas finalizações como ondas, cachos, lisos ou coques. Seu design compacto facilita o armazenamento e o transporte, tornando-o perfeito para viagens. Com uma interface intuitiva, é acessível a todos, independentemente da experiência. Transforme sua rotina de beleza e tenha um cabelo deslumbrante todos os dias com o HairBot.
             </p>
           </div>  
+        </div>
+      </div>
+      <div class="row mt-4">
+        <div class="col-4 d-flex justify-content-center">
+          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
+        </div>
+        <div class="col-4 d-flex justify-content-center">
+          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
+        </div>
+        <div class="col-4 d-flex justify-content-center">
+          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
         </div>
       </div>
     </div>
