--- a/index.html
+++ b/index.html
@@ -58,7 +58,12 @@
       </div>
       <div class="row mt-5 mb-3">
         <div class="col-4 d-flex justify-content-center">
-          <img src="./img/good-pontos/energia.png" alt="Longa durabilidade" class="img-fluid my-auto">
+          <div class="flashcard">
+            <img src="./img/good-pontos/energia.png" alt="Longa durabilidade" class="img-fluid">
+            <div class="flashcard-content">
+              <h5>Longa Durabilidade</h5>
+            </div>
+          </div>
         </div>
         <div class="col-4 d-flex justify-content-center">
           <img src="./img/good-pontos/robo.png" alt="Longa durabilidade" class="img-fluid my-auto">
