--- a/finalizacoes.html
+++ b/finalizacoes.html
@@ -105,7 +105,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-11.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">cabelo meio preso</h5>
+                  <h5 class="card-title">Cabelo meio preso</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
@@ -114,7 +114,7 @@
               <div class="card" style="width: 18rem;">
                 <img src="./img/cabelos/cabelo-12.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">cabelo amarrado na frente</h5>
+                  <h5 class="card-title">Rabo de cavalo escovado</h5>
                   <a href="#" class="btn btn-pink">Quero Esse!</a>
                 </div>
               </div>
