--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
     <div class="container"> 
       <div class="row">
         <div class="col-md-4 text-center"> 
-          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75 me-5">
-          <div class="text-center me-5">
+          <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
+          <div class="text-center">
             <button type="button" class="btn btn-pink" data-bs-toggle="modal" data-bs-target="#exampleModal2">
               Adquira o seu!
             </button>
