--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="./img/fundo.png" class="d-block w-100" alt="Fundo do carousel">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+          <div class="carousel-caption d-none d-md-block text-center">
+            <h1 class="titulo">Bem vindo!</h1>
+            <p class="description">Comece agora mesmo a explorar nosso app e descubra todas as finalizações que nosso robô pode te proporcionar!</p>
+            <a href="#" class="btn btn-pink mt-1">Ver Finalizações</a>
           </div>
         </div>
       </div>
-    </div>
+    </div>    
     <div class="container"> 
       <div class="row">
         <div class="col-md-4 text-center"> 
