--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
     </div>    
-    <div class="container"> 
+    <div class="container mt-5"> 
       <div class="row">
         <div class="col-md-4 text-center"> 
           <img src="./img/logo-hairbot.png" alt="Hairbot Logo" class="img-fluid w-75 h-75">
