--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="carousel-item active">
           <img src="./img/fundo.png" class="d-block w-100" alt="Fundo do carousel">
           <div class="carousel-caption d-none d-md-block">
-            <h1 class="titulo">Bem vindo!</h1>
+            <h1 class="title">Bem vindo!</h1>
             <p class="description">Comece agora mesmo a explorar nosso app e descubra todas as finalizações que nosso robô pode te proporcionar!</p>
             <a href="#" class="btn btn-pink mt-1">Ver Finalizações</a>
           </div>
